@@ -1,8 +1,9 @@
 == 0.15.1 2009-10-17
 
-* 2 minor enhancements:
+* 3 minor enhancements:
   * fixed deployment using capistrano
   * fixed zena:setup task to copy files instead of symlink
+  * better versions list and diff select
 
 == 0.15.0 2009-10-16
 
